@@ -91,7 +91,10 @@ exmpp_tls_openssl_la_LDFLAGS = -module -avoid-version			\
 			       $(ERL_DRIVER_LDFLAGS)			\
 			       $(EI_LDFLAGS) $(EI_LIBS)			\
 			       $(OPENSSL_LDFLAGS) $(OPENSSL_LIBS)
-exmpp_tls_openssl_la_SOURCES = exmpp_tls.h exmpp_tls.c			\
+exmpp_tls_openssl_la_SOURCES = exmpp_driver.h				\
+			       exmpp_driver.c				\
+			       exmpp_tls.h				\
+			       exmpp_tls.c				\
 			       exmpp_tls_openssl.c
 
 # Zlib compression port driver.
@@ -101,5 +104,7 @@ exmpp_compress_zlib_la_LDFLAGS = -module -avoid-version			\
 				 $(ERL_DRIVER_LDFLAGS)			\
 				 $(EI_LDFLAGS) $(EI_LIBS)		\
 				 $(ZLIB_LDFLAGS) $(ZLIB_LIBS)
-exmpp_compress_zlib_la_SOURCES = exmpp_compress.h			\
+exmpp_compress_zlib_la_SOURCES = exmpp_driver.h				\
+				 exmpp_driver.c				\
+				 exmpp_compress.h			\
 				 exmpp_compress_zlib.c
